--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -5,7 +5,7 @@
     <parent>
 		<groupId>io.servicefabric</groupId>
         <artifactId>servicefabric-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
 	<artifactId>servicefabric-cluster</artifactId>
