--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.servicefabric</groupId>
         <artifactId>servicefabric-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>servicefabric-transport</artifactId>
