--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.servicefabric</groupId>
@@ -9,8 +9,9 @@
 
     <name>ServiceFabric</name>
     <description>
-		Service Fabric is a framework that enables quick and easy development of modern distributed, resilient, scalable reactive applications such as on-line gaming, eTrading and Social.
-	</description>
+        Service Fabric is a framework that enables easy development of modern distributed, resilient, scalable
+        reactive applications such as on-line gaming and social.
+    </description>
     <inceptionYear>2015</inceptionYear>
     <url>http://servicefabric.io</url>
 
@@ -21,20 +22,24 @@
         </license>
     </licenses>
 
+    <prerequisites>
+        <maven>3.0.3</maven>
+    </prerequisites>
+
     <scm>
-		<url>https://github.com/servicefabric/servicefabric</url>
+        <url>https://github.com/servicefabric/servicefabric</url>
         <connection>scm:git:git@github.com:servicefabric/servicefabric.git</connection>
         <developerConnection>scm:git:git@github.com:servicefabric/servicefabric.git</developerConnection>
-		<tag>HEAD</tag>
-	</scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <developers>
         <developer>
             <id>servicefabric.io</id>
             <name>The ServiceFabric Project Contributors</name>
             <email>a.kharenko@gmail.com</email>
-			<organization>The ServiceFabric Project</organization>
-			<organizationUrl>http://servicefabric.io/</organizationUrl>
+            <organization>The ServiceFabric Project</organization>
+            <organizationUrl>http://servicefabric.io/</organizationUrl>
         </developer>
     </developers>
 
@@ -48,31 +53,96 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-	
-	<properties>
-		<version.junit>4.11</version.junit>
-        <logback.version>1.0.13</logback.version>
-	</properties>
-	
-	<modules>
-		<module>transport</module>
-		<module>cluster</module>
-	</modules>
-	
-    <dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${version.junit}</version>
-			<scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <slf4j.version>1.7.7</slf4j.version>
+        <rxjava.version>1.0.6</rxjava.version>
+        <guava.version>18.0</guava.version>
+        <findbugs.version>2.0.3</findbugs.version>
+        <netty.version>4.0.28.Final</netty.version>
+        <protostuff.version>1.3.2</protostuff.version>
+        <protobuf.version>2.4.1</protobuf.version>
+    </properties>
+
+    <modules>
+        <module>transport</module>
+        <module>cluster</module>
+        <module>testlib</module>
+        <module>benchmark</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.reactivex</groupId>
+                <artifactId>rxjava</artifactId>
+                <version>${rxjava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
+                <version>${findbugs.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.protostuff</groupId>
+                <artifactId>protostuff-api</artifactId>
+                <version>${protostuff.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.protostuff</groupId>
+                <artifactId>protostuff-runtime</artifactId>
+                <version>${protostuff.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.protostuff</groupId>
+                <artifactId>protostuff-core</artifactId>
+                <version>${protostuff.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-buffer</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-codec</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-common</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-handler</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-transport</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
@@ -99,12 +169,21 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.3</version>
                 <configuration>
+                    <compilerVersion>1.7</compilerVersion>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <compilerArgs>
+                        <arg>-Xlint:unchecked</arg>
+                    </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.7.2</version>
             </plugin>
         </plugins>
     </build>
@@ -135,6 +214,7 @@
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
+                                <phase>post-integration-test</phase>
                                 <goals>
                                     <goal>jar-no-fork</goal>
                                 </goals>
@@ -148,6 +228,7 @@
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
+                                <phase>post-integration-test</phase>
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
