Initial commit for examples module

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <module>cluster</module>
         <module>testlib</module>
         <module>benchmark</module>
+        <module>examples</module>
     </modules>
 
     <dependencyManagement>
