Cluster and transport code clean up. Part 3
* Introduce new Message and migrate all components to it
* Clean up IGossipProtocol interface and make it work with new Message
* Clean up IClusterMembership interface
* Clean up Cluster code and ICluster interface (without JavaDocs yet)

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>servicefabric-examples</artifactId>
+	<name>ServiceFabric/Examples</name>
 
 	<dependencies>
 		<dependency>
