--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,20 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>io.servicefabric</groupId>
-		<artifactId>servicefabric-parent</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
-	</parent>
-	<artifactId>servicefabric-examples</artifactId>
-	<name>ServiceFabric/Examples</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>io.servicefabric</groupId>
+        <artifactId>servicefabric-parent</artifactId>
+        <version>0.0.4-SNAPSHOT</version>
+    </parent>
+    <artifactId>servicefabric-examples</artifactId>
+    <name>ServiceFabric/Examples</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>servicefabric-cluster</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
-	
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>servicefabric-cluster</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
