--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.servicefabric</groupId>
@@ -9,7 +11,8 @@
 
     <name>ServiceFabric</name>
     <description>
-        Service Fabric is a framework that enables easy development of modern distributed, resilient, scalable
+        Service Fabric is a framework that enables easy development of modern distributed,
+        resilient, scalable
         reactive applications such as on-line gaming and social.
     </description>
     <inceptionYear>2015</inceptionYear>
@@ -29,7 +32,8 @@
     <scm>
         <url>https://github.com/servicefabric/servicefabric</url>
         <connection>scm:git:git@github.com:servicefabric/servicefabric.git</connection>
-        <developerConnection>scm:git:git@github.com:servicefabric/servicefabric.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:servicefabric/servicefabric.git
+        </developerConnection>
         <tag>HEAD</tag>
     </scm>
 
