--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <module>testlib</module>
         <module>benchmark</module>
         <module>examples</module>
+        <module>services</module>
     </modules>
 
     <dependencyManagement>
