Primitive annotations processor

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>servicefabric-cluster</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>servicefabric-testlib</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
 </project>
