[maven-release-plugin] prepare release v0.0.4

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.servicefabric</groupId>
     <artifactId>servicefabric-parent</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4</version>
     <packaging>pom</packaging>
 
     <name>ServiceFabric</name>
@@ -34,7 +32,7 @@
         <connection>scm:git:git@github.com:servicefabric/servicefabric.git</connection>
         <developerConnection>scm:git:git@github.com:servicefabric/servicefabric.git
         </developerConnection>
-        <tag>HEAD</tag>
+        <tag>v0.0.4</tag>
     </scm>
 
     <developers>
