--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.servicefabric</groupId>
     <artifactId>servicefabric-parent</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>ServiceFabric</name>
@@ -32,7 +32,7 @@
         <connection>scm:git:git@github.com:servicefabric/servicefabric.git</connection>
         <developerConnection>scm:git:git@github.com:servicefabric/servicefabric.git
         </developerConnection>
-        <tag>v0.0.4</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
