#28 Improve Cluster join API. Make join async. Motivation: *There should not be blocking calls in Cluster API Done: * Make transport start async * Make cluster start async

--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -15,6 +15,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava-guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>servicefabric-testlib</artifactId>
             <version>${project.version}</version>
