--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.scalecube</groupId>
         <artifactId>scalecube-parent</artifactId>
-        <version>0.0.5</version>
+        <version>0.0.6-SNAPSHOT</version>
     </parent>
     <artifactId>scalecube-transport</artifactId>
     <name>ScaleCube/Transport</name>
