Migrate service-support branch onto master

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <module>testlib</module>
         <module>benchmark</module>
         <module>examples</module>
+        <module>services</module>
     </modules>
 
     <dependencyManagement>
