--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>protostuff-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-collectionschema</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
         </dependency>
