--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,16 @@
                 <version>${protostuff.version}</version>
             </dependency>
             <dependency>
+                <groupId>io.protostuff</groupId>
+                <artifactId>protostuff-runtime-registry</artifactId>
+                <version>${protostuff.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.protostuff</groupId>
+                <artifactId>protostuff-collectionschema</artifactId>
+                <version>${protostuff.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
                 <version>${protobuf.version}</version>
@@ -148,6 +158,12 @@
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-transport</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-transport-native-epoll</artifactId>
+                <classifier>linux-x86_64</classifier>
                 <version>${netty.version}</version>
             </dependency>
         </dependencies>
