Change mail in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <developer>
             <id>scalecube.io</id>
             <name>The ScaleCube Project Contributors</name>
-            <email>a.kharenko@gmail.com</email>
+            <email>info@scalecube.io</email>
             <organization>The ScaleCube Project</organization>
             <organizationUrl>http://scalecube.io/</organizationUrl>
         </developer>
