Membership refactoring, Part 1 (#78)
* Remove port settings from cluster config

* Extract membership config to separate class

* Make ClusterMembership use config instead of settings

* Make ClusterMembership use transport instead of address

* Cluster membership refactoring continued

* Cluster membership refactoring continued

* Remove cluster membership builder from test

* Clean up cluster config

* Clean up cluster membership API, do not expose membership protocol

* Make all subjects serialized

* Transport remove logging handler since useless

* Make all subjects returned via listen .asObservable

* Fix checkstyle violations

* Add metadata as one of Cluster.join... params and clean up examples

* Change mail in pom.xml

* Remove unused static fields from ClusterMetadataExample

* Remove rxjava-guava dependency and do not use static field for default configs

* Update RxJava to 1.1.9 and Guava to 19.0

* Update description in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
     <name>ScaleCube</name>
     <description>
-        ScaleCube is a microservices framework for the rapid development of distributed, resilient, reactive
-        applications that scales.
+        ScaleCube is a lightweight decentralized cluster membership, failure detection, messaging and
+        gossip protocol library for the Java VM.
     </description>
     <inceptionYear>2015</inceptionYear>
     <url>http://scalecube.io</url>
@@ -39,7 +39,7 @@
         <developer>
             <id>scalecube.io</id>
             <name>The ScaleCube Project Contributors</name>
-            <email>a.kharenko@gmail.com</email>
+            <email>info@scalecube.io</email>
             <organization>The ScaleCube Project</organization>
             <organizationUrl>http://scalecube.io/</organizationUrl>
         </developer>
@@ -61,9 +61,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <slf4j.version>1.7.7</slf4j.version>
-        <rxjava.version>1.0.6</rxjava.version>
-        <rxjava-guava.version>1.0.3</rxjava-guava.version>
-        <guava.version>18.0</guava.version>
+        <rxjava.version>1.1.9</rxjava.version>
+        <guava.version>19.0</guava.version>
         <findbugs.version>2.0.3</findbugs.version>
         <netty.version>4.0.40.Final</netty.version>
         <protostuff.version>1.4.4</protostuff.version>
@@ -94,11 +93,6 @@
                 <groupId>io.reactivex</groupId>
                 <artifactId>rxjava</artifactId>
                 <version>${rxjava.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.reactivex</groupId>
-                <artifactId>rxjava-guava</artifactId>
-                <version>${rxjava-guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
