--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -22,6 +22,11 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.unquietcode.tools.jstate</groupId>
+            <artifactId>jstate</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
