create leader election maven module to support RAFT leader election protocol

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>testlib</module>
         <module>benchmark</module>
         <module>examples</module>
+        <module>leaderelection</module>
     </modules>
 
     <dependencyManagement>
