--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -41,6 +41,7 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-transport-native-epoll</artifactId>
             <classifier>linux-x86_64</classifier>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>io.reactivex</groupId>
@@ -73,6 +74,7 @@
         <dependency>
             <groupId>io.protostuff</groupId>
             <artifactId>protostuff-collectionschema</artifactId>
+            <version>${protostuff.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
