--- a/consul-registry-integration/pom.xml
+++ b/consul-registry-integration/pom.xml
@@ -8,69 +8,37 @@
 		<artifactId>scalecube-parent</artifactId>
 		<version>0.9.1-SNAPSHOT</version>
 	</parent>
-
-	<artifactId>scalecube-services</artifactId>
-	<name>ScaleCube/Services</name>
-
+	
+	<artifactId>consul-registry-integration</artifactId>
+	<name>ScaleCube/ConsulExtension</name>
+	
 	<dependencies>
-
 		<dependency>
 			<groupId>com.orbitz.consul</groupId>
 			<artifactId>consul-client</artifactId>
 			<version>0.12.8</version>
 		</dependency>
-
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>scalecube-cluster</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>scalecube-testlib</artifactId>
-			<version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
-		
 		<dependency>
 			<groupId>com.typesafe</groupId>
 			<artifactId>config</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.rapidoid/rapidoid-http -->
 		<dependency>
-			<groupId>org.rapidoid</groupId>
-			<artifactId>rapidoid-quick</artifactId>
-			<version>5.1.9</version>
-			<exclusions>
-				<exclusion>
-					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-classic</artifactId>
-				</exclusion>
-			</exclusions>
-
-
+			<groupId>${project.groupId}</groupId>
+			<artifactId>scalecube-cluster</artifactId>
+			<version>${project.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>scalecube-services</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<id>central</id>
-			<name>bintray</name>
-			<url>http://jcenter.bintray.com</url>
-		</repository>
-	</repositories>
 </project>
