improve examples and fix consul discovery service ids

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -9,6 +9,18 @@
     <name>ScaleCube/Examples</name>
 
     <dependencies>
+    	<dependency>
+			<groupId>io.scalecube</groupId>
+			<artifactId>scalecube-services</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.scalecube</groupId>
+			<artifactId>scalecube-consul</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>scalecube-cluster</artifactId>
