--- a/testlib/pom.xml
+++ b/testlib/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.scalecube</groupId>
         <artifactId>scalecube-parent</artifactId>
-        <version>0.9.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>scalecube-testlib</artifactId>
     <name>ScaleCube/Testlib</name>
