--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -14,6 +14,20 @@
             <artifactId>scalecube-services</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.rapidoid/rapidoid-http -->
+		<dependency>
+			<groupId>org.rapidoid</groupId>
+			<artifactId>rapidoid-quick</artifactId>
+			<version>5.1.9</version>
+			<exclusions>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
     </dependencies>
 
 </project>
