--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-parent</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>pom</packaging>
 
     <name>ScaleCube</name>
@@ -31,7 +31,7 @@
         <connection>scm:git:git@github.com:scalecube/scalecube.git</connection>
         <developerConnection>scm:git:git@github.com:scalecube/scalecube.git
         </developerConnection>
-        <tag>HEAD</tag>
+        <tag>v1.0.2</tag>
     </scm>
 
     <developers>
