--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -43,8 +43,14 @@
             <classifier>linux-x86_64</classifier>
         </dependency>
         <dependency>
-            <groupId>io.reactivex</groupId>
+            <groupId>org.reactivestreams</groupId>
+            <artifactId>reactive-streams</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
+            <version>2.0.3</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
