--- a/pom.xml
+++ b/pom.xml
@@ -205,10 +205,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
-				<configuration>
-					<!-- Travis build workaround -->
-					<argLine>-Xms1024m -Xmx2048m</argLine>
-				</configuration>
+				
 			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -239,6 +236,10 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.7.201606060606</version>
+				<configuration>
+		          <destfile>${basedir}/target/coverage-reports/jacoco-unit.exec</destfile>
+		          <datafile>${basedir}/target/coverage-reports/jacoco-unit.exec</datafile>
+		        </configuration>
 				<executions>
 					<execution>
 						<goals>
