--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
-				
+				<configuration>
+					<!-- Travis build workaround -->
+					<argLine>-Xms1024m -Xmx4048m</argLine>
+				</configuration>
 			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
