Add metrics service call meter requests meter responses meter errors

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
         <module>examples</module>
         <module>services</module>
     	<module>metrics</module>
-    	<module>scalecube-metrics-codahale</module>
+    	<module>metrics-codahale</module>
     </modules>
 
     <dependencyManagement>
