--- a/scalecube-metrics-codahale/pom.xml
+++ b/scalecube-metrics-codahale/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>scalecube-metrics-codahale</artifactId>
-	<name>Scalecube/metrics-codahale</name>
+	<name>Scalecube/Metrics-Codahale</name>
 
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -28,11 +28,11 @@
 			<artifactId>metrics-core</artifactId>
 			<version>${metrics.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
+		 <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>scalecube-testlib</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
