--- a/services/pom.xml
+++ b/services/pom.xml
@@ -18,7 +18,13 @@
 			<artifactId>scalecube-cluster</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>scalecube-metrics</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-testlib</artifactId>
