--- a/services/pom.xml
+++ b/services/pom.xml
@@ -20,6 +20,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>${metrics.version}</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-testlib</artifactId>
 			<version>${project.version}</version>
